<resources>
    <string name="app_name">Incense</string>
    <string name="action_logOut">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userhint">User</string>
    <string name="passwordhint">Password</string>
    <string name="loginButton">Login</string>
    <string name="signup">No account? Slide left to Sign up</string>
    <string name="emailHint">Email</string>
    <string name="signupButton">Sign Up!</string>
    <string name="subtitle">Annoying people</string>
    <string name="back_button">Slide right for Log in </string>
    <string name="tab1">Inbox</string>
    <string name="tab2">Friends</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add some friends to start</string>
    <string name="action_add_friend">Add Friend</string>

    <!-- dialogs -->
    <string name="pickone">Pick One</string>
    <string name="sendtext">Send Text</string>
    <string name="sendimage">Send Image</string>
    <string name="sendvideo">Send Video</string>
    <string name="sendraw">Send Draw</string>
    <string name="deletefriend">Delete Friend</string>

    <string name="yourmessageto">Your Message to</string>
    <string name="says">Says:</string>

    <!--draw dialogs -->
    <string name="brushsize">Brush size:</string>
    <string name="erasersize">Eraser size:</string>

    <string name="newdraw">New Draw</string>
    <string name="doyouwantnewdraw">Do you want to start a new draw?</string>

    <string name="doyouwantsenddraw">Do you want to send this draw?</string>


    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <!-- snackbar messages -->
    <string name="loginFail">Login Failed :(</string>
    <string name="alreadyFriends">Already Friends :)</string>

    <!-- tutorial text -->
    <string name="tutorial1t">Incense</string>
    <string name="tutorial1s">Incense te permite enviar mensajes, fotos, videos y dibujos entre tus amigos y solo tienen 10 segundos para verlo! Awesome!</string>
    <string name="tutorial2t">El comienzo</string>
    <string name="tutorial2s">Empieza añadiendo a tus amigos dando al boton + y al primer icono y pulsale</string>
    <string name="tutorial3t">Hello world</string>
    <string name="tutorial3s">Ve a la pestaña de amigos y vuelve a pulsar a tu amigo y elige que quieres enviarles</string>
    <string name="tutorial4t">Estas listo padawan</string>
    <string name="tutorial4s">Ya sabes todo lo que tienes que saber para usar Incense. Diviertete!</string>

    <!-- draw thing and stuff -->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
