<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#9b27af"><![CDATA[

    />



    ]]>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendtext"
        android:id="@+id/TextBtn"
        android:background="#009688"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendimage"
        android:id="@+id/imgBtn"
        android:layout_gravity="center_horizontal"
        android:background="#26a69a"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendvideo"
        android:id="@+id/videBtn"
        android:layout_gravity="center_horizontal"
        android:background="#26a69a"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendraw"
        android:id="@+id/drawBtn"
        android:layout_gravity="center_horizontal"
        android:background="#4db6ac"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletefriend"
        android:id="@+id/deleteBtn"
        android:layout_gravity="center_horizontal"
        android:background="#80cbc4"
        android:textColor="#ffffff" />
</LinearLayout>