<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:scaleType="fitXY"
        android:src="@drawable/fondoguay_spin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupButton"
        android:id="@+id/signupButton"
        android:nestedScrollingEnabled="false"
        android:background="@drawable/button_custom_signup"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:background="#58000000"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/userhint"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:background="@drawable/myyep_edit_text_holo_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/passwordhint"
            android:layout_below="@+id/usernameField"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textColorHint="#fff"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:background="@drawable/myyep_edit_text_holo_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:hint="@string/emailHint"
            android:textColorHint="#fff"
            android:layout_alignBaseline="@+id/back_button"
            android:layout_alignBottom="@+id/back_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:background="@drawable/myyep_edit_text_holo_light" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/back_button"
        android:id="@+id/back_button"
        android:textColor="#fff"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:textSize="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"/>

</RelativeLayout>
